<resources>
    <string name="heading_example">Heading Example</string>
    <string name="categorias">Categorías</string>
    <string name="expandir_catalogo">Ver todo</string>
    <string name="expandir_catalogo_short">Ir</string>
    <string name="cat1_name">Interior</string>
    <string name="cat2_name">Perenne</string>
    <string name="cat3_name">Árboles</string>
    <string name="cat4_name">Frutales</string>
    <string name="cat5_name">Pet Friendly</string>
    <string name="cat6_name">Exóticas</string>
    <string name="home_recommended_1">Plantas recomendadas para ti!</string>
    <string name="recommended1_product1">Suculenta</string>
    <string name="recommended1_product1_price">$15.000</string>
    <string name="recommended1_product2">Manto de Eva</string>
    <string name="recommended1_product2_price">$75.000</string>
    <string name="recommended1_product3">Girasol</string>
    <string name="recommended1_product3_price">$5.000</string>
    <string name="recommended1_product4">Lengua de Suegra</string>
    <string name="recommended1_product4_price">$15.000</string>
    <string name="recommended1_product5">Monstera</string>
    <string name="recommended1_product5_price">$30.000</string>
    <string name="recommended1_product6">Pata de Elefante</string>
    <string name="recommended1_product6_price">$50.000</string>
    <string name="advertisement">ADVERTISEMENT</string>
    <string name="home_recommended2">Escogidas para ti en la categoría Pet-Friendly</string>
    <string name="necesitas_ayuda">¿Necesitas ayuda?</string>
    <string name="terminos_y_condiciones">Términos y condiciones</string>
    <string name="promociones">Promociones</string>
    <string name="conocer_mas">Conocer más</string>
    <string name="inicio">Inicio</string>
    <string name="direccion_envio">Dirección de envío</string>
    <string name="product_description_example">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce sed nisi purus. Cras bibendum neque diam, at rutrum augue dignissim vel. Sed rutrum ex non purus egestas facilisis. Aliquam erat volutpat. Duis vitae leo vel est ultricies sodales. Etiam ornare sapien feugiat magna iaculis euismod sed id tortor. Duis rhoncus pellentesque metus. Cras luctus semper leo ac venenatis. Curabitur tellus dui, euismod vel elit ut, consequat feugiat ligula. Sed efficitur id nisi ac cursus. Morbi ut lectus ut elit dignissim accumsan. Phasellus quam lorem, eleifend porta mattis et, gravida quis libero. Cras maximus porta tortor, ac posuere lorem pharetra vitae. Duis tincidunt vel mi non laoreet.</string>
    <string name="add_to_cart">Añadir al carrito</string>
    <string name="mis_compras">Mis Compras</string>
    <string name="product_size">Tamaño:</string>
    <string name="recommended1_qty">1</string>
    <string name="codigo_de_promocion">Codigo de promoción</string>
    <string name="aplicar">Aplicar</string>
    <string name="sub_total">Sub-Total</string>
    <string name="total_envio">Total Envío</string>
    <string name="descuento">Descuento</string>
    <string name="sub_total_price">$17.990</string>
    <string name="total_envio_price">$3.500</string>
    <string name="descuentos_price">- $4.000</string>
    <string name="total">Total</string>
    <string name="total_price">$17.490</string>
    <string name="comprar">Comprar</string>
    <string name="ingresa">Ingresa</string>
    <string name="bienvenida">Bienvenido, que bueno verte</string>
    <string name="email">Email</string>
    <string name="hint_email">example@gmail.com</string>
    <string name="password">Password</string>
    <string name="password_hint">*******************</string>
    <string name="password_reset">¿Olvidasate tu clave?</string>
    <string name="sign_in">Ingresar</string>
    <string name="ingreso_alternativo">Entra con tu cuenta:</string>
    <string name="crear_cuenta">¿Aun no tienes cuenta?</string>
    <string name="crear_cuenta_button">Crea una cuenta</string>
    <string name="catalogcvname">CatalogCVName</string>
    <string name="catalogcvprice">CatalogCVPrice</string>
    <string name="wellcomeSplash">Bienvenido</string>
    <string name="shopping_cart_product_name">Planta Ejemplo</string>
    <string name="shopping_cart_product_quantity">1</string>
    <string name="shopping_cart_product_price">$xxxxx</string>
    <string name="shopping_cart_product_image_descr">Imágen del producto agregado al carrito</string>
    <string name="plus_sign">+</string>
    <string name="minus_sign">-</string>
    <string name="product_quantity">1</string>
    <string name="cart_quantity_string">"Cantidad: "</string>
    <string name="invitado">Invitado</string>
    <string name="name">Nombre: </string>
    <string name="direccion">Direccion: </string>
    <string name="hint_name">Juan Pereira Gonzalez</string>
    <string name="hint_direction">Las Mercedes #5112</string>
    <string name="city">Ciudad: </string>
    <string name="hint_city">Punta Arenas</string>
    <string name="region">"Región: "</string>
    <string name="hint_region">Region de Magallanes</string>
    <string name="zip">"Zip: "</string>
    <string name="hint_zip">6200018</string>
    <string name="phone">"Telefono: "</string>
    <string name="hint_phone">+569XXXXXXXX</string>
    <string name="email_shipping">Email :</string>
    <string name="hint_email_shipping">nombre@ejemplo.com</string>
    <string name="shipping_information">Datos de Envío</string>
    <string name="place_order">Realizar Pedido</string>
    <string name="thanks">Gracias por tu pedido</string>
    <string name="gratitude1">Tu pedido se ha recibido y se esta procesando.</string>
    <string name="gratitude2">Para tu informacion, los detalles del pedido son los siguientes.</string>
    <string name="Pay">Pago</string>
    <string name="payment_method">Seleccionar método de pago</string>
    <string name="credit_car">Tarjeta</string>
    <string name="paypal">PayPal</string>
    <string name="card_selector">Seleccionar tarjeta</string>
    <string name="hint_card_number">XXXX-XXXX-XXXX-XXXX</string>
    <string name="hint_cvv_number">CVV</string>
    <string name="hint_card">XXXX-XXXX-XXXX-XXXX</string>
    <string name="hintCVV">CVV</string>
    <string name="payment_confirmation_message">Tu pedido se ha recibido y se está procesando. Para tu información, los detalles del pedido son los siguientes.</string>
    <string name="payment_confirmation_title">Gracias por tu pedido</string>
    <string name="order_number_prefix">Pedido</string>
    <string name="order_number">1</string>
    <string name="order_product_title">Producto</string>
    <string name="order_quantity_title">Cantidad</string>
    <string name="order_price_title">Precio</string>
    <string name="order_client_data">Datos del Cliente</string>
    <string name="order_billing_address">Dirección de Facturación</string>
    <string name="order_shipping_address">Dirección de Envío</string>
    <string name="card_date_hint">MM/YY</string>
    <string name="eres_nuevo_">¿Eres nuevo en Plant AI?</string>
    <string name="registrate_">Registrate y disfruta de nuestros productos y beneficios</string>
    <string name="register_name_hint">Nombre*</string>
    <string name="register_surname_hint">Apellido*</string>
    <string name="register_rut_hint">RUT*</string>
    <string name="register_phone_hint">Número de Teléfono</string>
    <string name="register_email">Correo Electrónico*</string>
    <string name="register_password">Contraseña*</string>
    <string name="register_terms_n_conditions">Acepto Los Términos Y Condiciones</string>
    <string name="register_create_account">Crear Cuenta</string>
    <string name="register_password_again_hint">Repite la Contraseña*</string>
    <string name="birth_date_buttn">Fecha de Nacimiento*</string>
    <string name="register_username_hint">Nombre de Usuario*</string>
    <string name="login">Inicia sesión</string>
    <string name="question_login">¿No tienes cuenta?</string>
    <string name="registration_login">Registrate aquí</string>
    <string name="wellcome_singin">Bienvenido a Plant AI</string>
    <string name="register_email_singin">Correo electrónico</string>
    <string name="register_password_singin">Contraseña</string>
    <string name="register_hint_pass_singin">• • • • • • •</string>
    <string name="login_singin">Iniciar sesión</string>
    <string name="question1_singin">¿No tienes cuenta?</string>
    <string name="question2_singin">Registrate aqui</string>
    <string name="catalog_filter">Filtros</string>
    <string-array name="gender_items">
        <item>Selecciona tu Género (Opcional)</item>
        <item>Masculino</item>
        <item>Femenino</item>
        <item>Prefiero no decir</item>
    </string-array>
    <string-array name="initial_budget_slider_values">
        <item>10000</item>
        <item>100000</item>
    </string-array>
    <string name="search_hint">Buscar</string>
    <string name="activity_main_recycler_menu_item_all">Todas</string>
    <string name="activity_main_recycler_menu_item_plants">Destacados</string>
    <string name="activity_main_recycler_menu_item_accesories">Accesorios</string>
    <string name="activity_main_recycler_menu_item_inputs">Insumos</string>
    <string name="activity_main_bottom_icon_truck">ENVIO GRATIS</string>
    <string name="activity_main_bottom_icon_stars">CLUB PLANTAI</string>
    <string name="activity_main_bottom_icon_grass">CONSEJOS Y TIPS</string>
    <string name="activity_main_bottom_button_truck">App Plant Ai</string>
    <string name="activity_main_bottom_button_stars">Beneficios</string>
    <string name="activity_main_bottom_button_grass">Consejos</string>
    <string name="sort_popular_products">Productos populares</string>
    <string name="sort_most_sold">Más vendidos</string>
    <string name="sort_price_high_to_low">Precio mayor a menor</string>
    <string name="sort_price_low_to_high">Precio menor a mayor</string>
    <string name="search_catalog_hint">Buscar plantas...</string>
    <string name="search_no_results">No se encontraron resultados para: %1$s</string>
    <string name="search_error">Error al realizar la búsqueda</string>
    <string name="no_search_results">No se encontraron plantas que coincidan con: "%1$s"</string>
    <string name="no_catalog_items">No hay plantas disponibles en este momento</string>
    <string name="error_loading_plants">Hubo un error al cargar las plantas. Por favor, intente nuevamente</string>
    <string name="error_network">Error de conexión. Por favor, verifique su conexión a internet</string>
    <string name="error_server">Error en el servidor. Por favor, intente más tarde</string>
    <string name="activity_categories_main">Categorías</string>
    <string name="activity_categories_card_1">Plantas</string>
    <string name="activity_categories_card_2">Comunidad</string>
    <string name="activity_categories_card_3">Educación</string>
    <string name="activity_categories_card_4">Asistente virtual</string>
    <string name="activity_categories_card_5">Vende con nosotros</string>
    <string name="activity_categories_card_6">Sobre Nosotros</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="plant_category_title">Placeholder Categoría</string>
    <string name="catalog_sort">Ordenar por</string>
    <string name="app_name">Plant AI</string>
    <string name="profile_close_session">Cerrar sesión</string>
    <string name="profile_user_cuppons">¿Tienes algún cupón?</string>
    <string name="profile_user_cuppons_hint">Cupón de descuento</string>
    <string name="profile_user_cuppons_add">Agregar</string>
    <string name="profile_user_cuppons_shopp">Ir a comprar</string>
    <string name="DialogFragment_tittle_1">Cerrar sesión</string>
    <string name="DialogFragment_tittle_2">¿Seguro que quieres cerrar sesión?</string>
    <string name="DialogFragment_button_2">Volver</string>
</resources>