<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_popup_background"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- Título -->
    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/quicksand_medium"
        android:text="@string/DialogFragment_tittle_1"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textColor="@color/primary_color"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:id="@+id/dialog_message"
        android:fontFamily="@font/quicksand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/DialogFragment_tittle_2"
        android:textColor="@color/primary_color"
        android:layout_gravity="center_horizontal"
        android:textSize="18sp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="16dp">


        <Button
            android:id="@+id/button_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/round_standar"
            android:text="@string/profile_close_session"
            android:textColor="@color/white"
            android:textSize="14sp" />


        <Button
            android:id="@+id/button_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@android:color/transparent"
            android:text="@string/DialogFragment_button_2"
            android:textColor="@color/primary_color"
            android:fontFamily="@font/quicksand_medium"
            android:textSize="14sp"
            android:textStyle="bold"/>
    </LinearLayout>
</LinearLayout>
