<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:id="@+id/linearLayout_cuppons">

    <TextView
        android:id="@+id/TextView_hello"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_user_cuppons"
        android:fontFamily="@font/quicksand_medium"
        android:textColor="@color/primary_color"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginBottom="15dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:orientation="horizontal">

        <EditText
            android:layout_width="220dp"
            android:layout_height="39dp"
            android:layout_gravity="center_vertical|center_horizontal|center"
            android:layout_marginEnd="22dp"
            android:padding="5dp"
            android:background="@drawable/rounded_shopping_edittext"
            android:fontFamily="@font/quicksand_medium"
            android:hint="@string/profile_user_cuppons_hint"
            android:inputType="textPersonName"
            android:paddingStart="12dp"
            tools:ignore="RtlSymmetry"/>

        <Button
            android:layout_gravity="center_vertical|center_horizontal"
            android:id="@+id/button_add_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:background="@drawable/rounded_button"
            android:fontFamily="@font/quicksand"
            android:text="@string/profile_user_cuppons_add"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:paddingTop="0dp"
            android:paddingBottom="3dp"
            android:paddingStart="28dp"
            android:paddingEnd="28dp"
            android:minWidth="0dp"
            android:minHeight="0dp"/>

    </LinearLayout>

    <View
        android:id="@+id/View_my_cuppon"
        android:layout_width="286dp"
        android:layout_height="1dp"
        android:layout_marginVertical="8dp"
        android:background="#FF8C30"
        android:layout_marginBottom="60dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <Button
        android:id="@+id/cuppons_shopp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:background="@drawable/rounded_button"
        android:fontFamily="@font/quicksand"
        android:gravity="center_vertical"
        android:minWidth="0dp"
        android:minHeight="0dp"
        android:paddingStart="28dp"
        android:paddingTop="0dp"
        android:paddingEnd="28dp"
        android:paddingBottom="3dp"
        android:text="@string/profile_user_cuppons_shopp"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:layout_marginBottom="30dp"/>


</LinearLayout>

